# mutation-predictability

./: LICENSE  README.md  pseudocode.md  pyproject.toml  requirements.txt
data/A2RQE2_9CELL/: data.csv  msa.a2m  msa.a3m  reference.fasta  structural_characteristics.csv  test_msa.a2m
data/AMIE_PSEAE_Wrenbeck_2017/: data.csv  reference.fasta  structural_characteristics.csv
data/AMY_BACSU/: raw_singles_data.csv  structural_characteristics.csv
data/BLAT_ECOLX_Deng_2012/: data.csv  structural_characteristics.csv
data/BLAT_ECOLX_Firnberg_2014/: data.csv
data/BLAT_ECOLX_Stiffler_2015/: data.csv  structural_characteristics.csv
data/CASP3_HUMAN_Roychowdhury_2020/: data.csv  reference.fasta  structural_characteristics.csv
data/MK01_HUMAN_Brenan_2016/: data.csv  structural_characteristics.csv
data/PTEN_HUMAN_Mighell_2018/: data.csv  per_residue_effect_statistics.csv  structural_characteristics.csv
data/SRC_HUMAN_Ahler_2019/: data.csv  structural_characteristics.csv
data/UBC9_HUMAN_Weile_2017/: data.csv  structural_characteristics.csv
data/amylase/: combinatorials.csv  grouped_levenshtein_distances.csv  msa.a3m  reference.fasta  structural_characteristics.csv
data/erk2/: data_from_protein_gym.csv  structural_characteristics.csv
misc/: potts_training_job_names.joblib  rita_training_job_names.joblib
notebooks/: demo.ipynb  figures_for_publication.ipynb  prepare_ssm_data.ipynb  regularization_effect.ipynb  ridge_effect.ipynb
notebooks/amylase/: assign_structural_characteristics.ipynb
output/: asp_config.txt
scripts/: color_by_effect.py  create_msa.sh
(+72 files in other folders)
